<resources>
    <string name="app_name">Todo</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">Log In</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="already_have_account">Alread have an account?</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="todo">Todo</string>
    <string name="save">Save</string>
</resources>
