<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registration_et_name"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registration_et_mail"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registration_et_password"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registration_et_confirm_password"
                android:layout_width="@dimen/_250dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="@dimen/_250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_btn"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="@dimen/_250dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/colorGray" />

    </LinearLayout>
</ScrollView>